<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/tw_search_title"
        android:lines="1"
        android:layout_marginHorizontal="@dimen/default_horizontal_margin"
        android:layout_marginTop="25dp"
        android:gravity="center"
        android:textStyle="bold"
        android:textSize="22sp"
        android:text="@string/search_title"
        android:textColor="@color/text_color"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toTopOf="@id/til_search"
        />

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/til_search"
        style="@style/Widget.Material3.TextInputLayout.OutlinedBox"
        android:layout_marginHorizontal="@dimen/default_horizontal_margin"
        android:layout_marginTop="10dp"
        app:errorEnabled="true"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tw_search_title"
        app:layout_constraintVertical_chainStyle="packed">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/et_search"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/search_hint"
            android:maxLines="1"
            android:inputType="text"
            android:maxLength="11"
            android:textColor="@color/text_color"
            />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/til_gender"
        app:errorEnabled="true"
        style="@style/Widget.Material3.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
        app:layout_constraintTop_toBottomOf="@id/til_search"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@id/til_sort"
        android:layout_height="wrap_content"
        android:layout_width="0dp"
        android:layout_marginEnd="5dp"
        android:layout_marginStart="@dimen/default_horizontal_margin"
        >

        <AutoCompleteTextView
            android:hint="@string/gender"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="none"
        />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/til_sort"
        style="@style/Widget.Material3.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
        app:layout_constraintTop_toBottomOf="@id/til_search"
        app:layout_constraintStart_toEndOf="@id/til_gender"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginStart="5dp"
        android:layout_height="wrap_content"
        app:errorEnabled="true"
        android:layout_width="0dp"
        android:layout_marginEnd="@dimen/default_horizontal_margin"
        >

        <AutoCompleteTextView
            android:hint="@string/sort_by"
            android:lines="1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="none"
            />

    </com.google.android.material.textfield.TextInputLayout>



    <Button
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:layout_marginHorizontal="@dimen/default_horizontal_margin"
        android:id="@+id/search_button"
        android:layout_marginTop="10dp"
        app:layout_constraintTop_toBottomOf="@id/til_gender"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"

        android:text="@string/btn_search"
        android:textAllCaps="false"
        />


    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rv_search_result_list"
        android:layout_width="0dp"
        app:layoutManager="androidx.recyclerview.widget.GridLayoutManager"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/search_button"
        tools:listitem="@layout/cat_item_short"/>


</androidx.constraintlayout.widget.ConstraintLayout>