<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android">

    <data>
        <variable
            name="viewModel"
            type="ru.tinkoff.fintech.meowle.presentation.shared.auth.AuthViewModel" />
    </data>
    <androidx.constraintlayout.widget.ConstraintLayout xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:id="@+id/container"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:context=".presentation.view.AuthActivity">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/tw_person_screen_title"
            android:lines="1"
            android:layout_marginHorizontal="50dp"
            android:layout_marginVertical="50dp"
            android:textStyle="bold"
            android:textSize="22sp"
            android:text="@string/auth_title"
            android:textColor="@color/text_color"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            />


        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/til_name"
            style="@style/Widget.Material3.TextInputLayout.OutlinedBox"
            android:layout_marginHorizontal="@dimen/large_horizontal_margin"
            android:error="@{viewModel.name_error}"
            app:layout_constraintTop_toBottomOf="@id/tw_person_screen_title"
            app:layout_constraintBottom_toTopOf="@id/til_phone"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintVertical_chainStyle="packed">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/et_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@={viewModel.name}"
                android:onTextChanged="@{() -> viewModel.onNameTextChanged()}"
                android:hint="@string/name_hint"
                android:maxLines="1"
                android:inputType="textCapWords"
                android:maxLength="23"
                />
        </com.google.android.material.textfield.TextInputLayout>


        <com.google.android.material.textfield.TextInputLayout
            style="@style/Widget.Material3.TextInputLayout.OutlinedBox"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/til_phone"
            android:layout_marginTop="4dp"
            android:error="@{viewModel.phone_error}"
            android:layout_marginHorizontal="@dimen/large_horizontal_margin"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/til_name"
            app:layout_constraintVertical_chainStyle="packed">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/et_phone"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@={viewModel.phone}"
                android:onTextChanged="@{() -> viewModel.onPhoneTextChanged()}"
                android:hint="@string/phone_hint"
                android:maxLines="1"
                android:inputType="phone"
                android:maxLength="12"
                />
        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:layout_marginHorizontal="50dp"
            android:layout_marginTop="50dp"
            android:layout_marginBottom="50dp"

            app:layout_constraintTop_toBottomOf="@id/til_phone"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"

            android:id="@+id/submit_button"
            android:text="@string/btn_enter"
            android:onClick="@{() -> viewModel.onSubmitButtonClick()}"
            android:textAllCaps="false"
            android:background="@drawable/button_drawable"
            />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>