<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android">

    <data>
        <variable
            name="viewModel"
            type="ru.tinkoff.fintech.meowle.presentation.shared.settings.SettingsViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent">


        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/tw_settings_title"
            android:lines="1"
            android:layout_marginHorizontal="25dp"
            android:layout_marginVertical="25dp"
            android:gravity="center"
            android:textStyle="bold"
            android:textSize="22sp"
            android:text="@string/settings_title"
            android:textColor="@color/text_color"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            />


        <com.google.android.material.switchmaterial.SwitchMaterial
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/sw_view_mode"
            android:layout_marginHorizontal="25dp"
            android:text="@string/settings_list_item_compose_headline"
            android:checked="@{viewModel.state.isCompose}"
            android:onClick="@{() -> viewModel.onComposeSwitchClicked()}"
            android:textColor="@color/text_color"
            android:enabled="true"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tw_settings_title"
            />

        <com.google.android.material.switchmaterial.SwitchMaterial
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/sw_any"
            android:layout_marginHorizontal="25dp"
            android:enabled="false"
            android:text="Меня нельзя тыкнуть"
            android:textColor="@color/text_color"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/sw_view_mode"
            />

        <Button
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:layout_marginHorizontal="50dp"
            android:layout_marginTop="50dp"
            android:id="@+id/add_button"

            app:layout_constraintTop_toBottomOf="@id/sw_any"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"

            android:text="@string/btn_confirm_settings"
            android:onClick="@{() -> viewModel.applySettings()}"
            android:textAllCaps="false"
            />


        <Button
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:layout_marginHorizontal="50dp"
            android:layout_marginVertical="10dp"
            android:id="@+id/logout_btn"

            app:layout_constraintTop_toBottomOf="@id/add_button"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:onClick="@{() -> viewModel.logout()}"
            android:text="@{@string/btn_logout + ' ' + viewModel.state.name}"
            android:textAllCaps="false"
            />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>